[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "rocket-args"
version = "0.1.0"
license = "MIT"
authors = ["Amadeusz Hercog <xaaq333@gmail.com>"]
repository = "https://github.com/Xaaq/Rocket-args"
documentation = "https://xaaq.github.io/Rocket-args"
description = "Make your arg parsing even more declarative!"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
tox = "^3.14.4"
factory-boy = "^2.12.0"
pytest = "^5.3.5"
mkdocs = "^1.0.4"
markdown-include = "^0.5.1"
mkdocs-material = "^4.6.3"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["rocket_args", "tests"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 120
