[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "rocket-args"
version = "0.1.0"
license = "MIT"
authors = ["Amadeusz Hercog <xaaq333@gmail.com>"]
repository = "https://github.com/Xaaq/Rocket-args"
documentation = "https://xaaq.github.io/Rocket-args"
description = "Make your arg parsing even more declarative!"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"
coverage = "^5.0.3"
factory-boy = "^2.12.0"
flake8 = "^3.7.9"
markdown-include = "^0.5.1"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
mypy = "^0.761"
pre-commit = "^2.0.1"
pytest = "^5.3.5"
tox = "^3.14.4"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["rocket_args", "tests"]
default_section = "THIRDPARTY"

[tool.black]
line-length = 120
